[gd_scene load_steps=2 format=3 uid="uid://gux15c8l66u7"]

[ext_resource type="Script" path="res://Scripts/UI/Views/ChatPane.gd" id="1_2uf7u"]

[node name="ChatPane" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InspectorPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(520, 520)

[node name="VBoxContainer" type="VBoxContainer" parent="InspectorPopup"]
custom_minimum_size = Vector2(512, 512)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="cdePrompt" type="CodeEdit" parent="InspectorPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Prompt Here"
line_folding = true

[node name="btnCloseInspector" type="Button" parent="InspectorPopup/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Chats"

[node name="btnNewChat" type="Button" parent="VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "New"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="tcChats" type="TabContainer" parent="VBoxContainer3/VSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_2uf7u")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer3/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="txtMemoryTitle" type="TextEdit" parent="VBoxContainer3/VSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Memory Title"

[node name="txtMainUserInput" type="TextEdit" parent="VBoxContainer3/VSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Hello there!"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3/VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="btnChatSettings" type="Button" parent="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="btnMemorize" type="Button" parent="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Notetate"

[node name="btnInspect" type="Button" parent="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Inspect"

[node name="btnAttachFile" type="Button" parent="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Attach"

[node name="btnChat" type="Button" parent="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Chat"

[node name="btnTest" type="Button" parent="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test"

[connection signal="pressed" from="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer/btnMemorize" to="VBoxContainer3/VSplitContainer/tcChats" method="_on_btn_memorize_pressed"]
[connection signal="pressed" from="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer/btnInspect" to="VBoxContainer3/VSplitContainer/tcChats" method="_on_btn_inspect_pressed"]
[connection signal="pressed" from="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer/btnChat" to="VBoxContainer3/VSplitContainer/tcChats" method="_on_chat_pressed"]
[connection signal="pressed" from="VBoxContainer3/VSplitContainer/VBoxContainer/HBoxContainer/btnTest" to="VBoxContainer3/VSplitContainer/tcChats" method="_on_btn_test_pressed"]
